--- a/Code/R/Assays.Rmd
+++ b/Code/R/Assays.Rmd
@@ -85,31 +85,7 @@ df <-
   select(-units) %>% 
   unite(group, condition, exposure_time, sep=" - ")
 
-# Normalize all the values so that the mean of the 0 treatment is 1 and the sd is 1
-
-# scaling_lst <- 
-#   df %>% 
-#   unite(group, compound, group, sep=",") %>% 
-#   split(.$group)
-# 
-# 
-# df_scaled <- 
-#   lapply(names(scaling_lst), function(x){
-#     scale_mean <- 
-#       scaling_lst[[x]] %>% 
-#       filter(group == x, treatment == 0) %>% 
-#       select(response) %>% 
-#       pull %>% 
-#       mean
-#     
-#     scaling_lst[[x]] %>% 
-#       mutate(response = ((response - scale_mean)/sd(response)) + 1)
-#   }) %>% 
-#   bind_rows() %>% 
-#   separate(group, into=c("compound", "group"), sep=",")
 df_scaled <- df
-
-
 
 ```
 
@@ -117,110 +93,120 @@ df_scaled <- df
 ```{r}
 
 #Barplot galore. Print barplots by group and create significance brackets using the games-howell test
+plot_bar_graph <- function(cmpnd, multiple.comparisons = FALSE){
+  df_means <-
+    df_scaled %>% 
+    filter(compound == cmpnd) %>%
+    group_by(group, treatment) %>% 
+    summarise(err = sd(response)/sqrt(length(response)), response=mean(response)) %>% 
+    ungroup %>% 
+    mutate(treatment = factor(treatment)) %>% 
+    mutate(group = factor(group, levels=c('Normoxia - 24 Hours', 'Hypoxia - 24 Hours', 
+                                          'Normoxia - 48 Hours', 'Hypoxia - 48 Hours'))) %>% 
+    arrange(group, treatment)
+  
+  df_means$y_err_max <- df_means$response + df_means$err
+  df_means$y_err_min <- df_means$response - df_means$err
+  max_height = max(df_means$y_err_max)
+  unit <- max_height / 25
+  bar_width = 0.5/3
+  
+  groups <- unique(as.character(df_means$group))
+  treatments <- unique(as.character(df_means$treatment))
+  title <- sprintf("LDH Across Groups for SVGp12 - %s", cmpnd)
+  plt <- ggplot(data=df_means, mapping = aes(y=response, x=group, fill=treatment), height=10) + 
+      geom_bar(position="dodge", stat="identity", width=0.5) + 
+      geom_errorbar(aes(ymin=y_err_min, ymax=y_err_max), width=.2, position=position_dodge(.5)) + 
+      theme_bw(base_size = 11) + 
+      labs(x="", y="LDH (Cell Damage)", fill = "Treatment (μg/ml)", title=title) 
+  if (multiple.comparisons){
+    for (i in 1:length(groups)){
+      grp <- as.character(groups[i])
+    
+      df_group <- df_scaled %>%
+        filter(compound == 'DEP', group == grp)
+    
+      df_group_means <- df_means %>%
+        filter(group == grp)
+    
+      # Perform the howell_tst for group comparisons
+      howell_tst <- games.howell(as.character(df_group$treatment), df_group$response)
+    
+      # Then oblieterate the statistical power of the test by implementing Šidák familywise correction
+      n_comparisons <- nrow(howell_tst)*length(groups)
+      alpha_corrected <- 1-(1-0.05)^(1/n_comparisons)
+    
+    
+      group_starting_x <- i - (length(treatments) * bar_width)/2
+      x_values = list()
+      y_offset <- 0
+      highest_treatment_in_group <- max(df_group_means$y_err_max)
+      for (j in 1:(length(treatments) -1)){
+        for (k in (j + 1):length(treatments)){
+    
+          max_treatment_height <-
+            df_group_means %>%
+            filter(treatment == treatments[j] | treatment == treatments[k]) %>%
+            select(y_err_max) %>%
+            pull %>%
+            max
+    
+          x_values <- c(group_starting_x + j*bar_width - bar_width/2 + bar_width/10,
+                        group_starting_x + j*bar_width - bar_width/2 + bar_width/10,
+                        group_starting_x + k*bar_width - bar_width/2 - bar_width/10,
+                        group_starting_x + k*bar_width - bar_width/2 - bar_width/10)
+    
+    
+          if (k-j ==1) {
+            y_pos <- max_treatment_height + 2 * unit
+          } else {
+            y_pos <- highest_treatment_in_group + 2*unit*(j - 1 + k - 1)
+          }
+    
+          y_values <- c(y_pos-unit, y_pos, y_pos, y_pos-unit)
+          x_text <- (group_starting_x + j*bar_width - bar_width/2 + bar_width/10 + group_starting_x + k*bar_width - bar_width/2 - bar_width/10)/2
+          y_text <- y_pos + 0.75*unit
+          df_line <- data.frame(x=x_values,y=y_values, treatment = rep(c('0'), 2))
+          treatments_conc <- paste(treatments[j], treatments[k], sep=" : ")
+          p_val <-
+            howell_tst %>%
+            filter(groups == treatments_conc) %>%
+            select(p) %>%
+            pull
+    
+    
+    
+          # A length check since R seems to insist that some of the p values be stored as numeric(0), producing a NULL as the output of the if statement. YAY R!
+          if (length(p_val) != 0){
+            if (p_val < alpha_corrected) {
+               lbl <- "*"
+            } else {
+              lbl <- "n.s."
+            }
+          } else {
+            lbl <- "n.s."
+          }
+    
+          plt <- plt + geom_line(data=df_line, aes(x=x,y=y)) + annotate("text", label=lbl, x=x_text, y=y_text, color="black", size=3)
 
-df_means <-
-  df_scaled %>% 
-  filter(compound == 'DEP') %>%
-  group_by(group, treatment) %>% 
-  summarise(err = sd(response)/sqrt(length(response)), response=mean(response)) %>% 
-  ungroup %>% 
-  mutate(treatment = factor(treatment)) %>% 
-  mutate(group = factor(group, levels=c('Normoxia - 24 Hours', 'Hypoxia - 24 Hours', 
-                                        'Normoxia - 48 Hours', 'Hypoxia - 48 Hours'))) %>% 
-  arrange(group, treatment)
-
-
-
-
-
-df_means$y_err_max <- df_means$response + df_means$err
-df_means$y_err_min <- df_means$response - df_means$err
-max_height = max(df_means$y_err_max)
-unit <- max_height / 25
-bar_width = 0.5/3
-
-groups <- unique(as.character(df_means$group))
-treatments <- unique(as.character(df_means$treatment))
-
-plt <- ggplot(data=df_means, mapping = aes(y=response, x=group, fill=treatment), height=10) + 
-    geom_bar(position="dodge", stat="identity", width=0.5) + 
-    geom_errorbar(aes(ymin=y_err_min, ymax=y_err_max), width=.2, position=position_dodge(.5)) + 
-    theme_bw(base_size = 11) + 
-    labs(x="", y="LDH (Cell Damage)", fill = "Treatment (μg/ml)", title="LDH Across Groups for SVGp12 - DEP") 
-
-for (i in 1:length(groups)){
-  grp <- as.character(groups[i])
-
-  df_group <- df_scaled %>%
-    filter(compound == 'DEP', group == grp)
-
-  df_group_means <- df_means %>%
-    filter(group == grp)
-
-  # Perform the howell_tst for group comparisons
-  howell_tst <- games.howell(as.character(df_group$treatment), df_group$response)
-
-  # Then oblieterate the statistical power of the test by implementing Šidák familywise correction
-  n_comparisons <- nrow(howell_tst)*length(groups)
-  alpha_corrected <- 1-(1-0.05)^(1/n_comparisons)
-  print(alpha_corrected)
-
-  group_starting_x <- i - (length(treatments) * bar_width)/2
-  x_values = list()
-  y_offset <- 0
-  highest_treatment_in_group <- max(df_group_means$y_err_max)
-  for (j in 1:(length(treatments) -1)){
-    for (k in (j + 1):length(treatments)){
-
-      max_treatment_height <-
-        df_group_means %>%
-        filter(treatment == treatments[j] | treatment == treatments[k]) %>%
-        select(y_err_max) %>%
-        pull %>%
-        max
-
-      x_values <- c(group_starting_x + j*bar_width - bar_width/2 + bar_width/10,
-                    group_starting_x + j*bar_width - bar_width/2 + bar_width/10,
-                    group_starting_x + k*bar_width - bar_width/2 - bar_width/10,
-                    group_starting_x + k*bar_width - bar_width/2 - bar_width/10)
-
-
-      if (k-j ==1) {
-        y_pos <- max_treatment_height + 2 * unit
-      } else {
-        y_pos <- highest_treatment_in_group + 2*unit*(j - 1 + k - 1)
-      }
-
-      y_values <- c(y_pos-unit, y_pos, y_pos, y_pos-unit)
-      x_text <- (group_starting_x + j*bar_width - bar_width/2 + bar_width/10 + group_starting_x + k*bar_width - bar_width/2 - bar_width/10)/2
-      y_text <- y_pos + 0.75*unit
-      df_line <- data.frame(x=x_values,y=y_values, treatment = rep(c('0'), 2))
-      treatments_conc <- paste(treatments[j], treatments[k], sep=" : ")
-      p_val <-
-        howell_tst %>%
-        filter(groups == treatments_conc) %>%
-        select(p) %>%
-        pull
-
-
-
-      # A length check since R seems to insist that some of the p values be stored as numeric(0), producing a NULL as the output of the if statement. YAY R!
-      if (length(p_val) != 0){
-        if (p_val < alpha_corrected) {
-           lbl <- "*"
-        } else {
-          lbl <- "n.s."
         }
-      } else {
-        lbl <- "n.s."
       }
+
 
       plt <- plt + geom_line(data=df_line, aes(x=x,y=y)) + annotate("text", label=lbl, x=x_text, y=y_text, color="black", size=3)
     }
-  }
+    }
+  
+  return(plt)
 }
 
-print(plt)
+p1 <- plot_bar_graph("DEP")
+p2 <- plot_bar_graph("Ox66")
+p3 <- plot_bar_graph("DEP + Ox66")
+
+ggsave(p1, filename = "../../Graphs/SVG/LDH//Barplots/DEP.png", device='png')
+ggsave(p2, filename = '../../Graphs/SVG/LDH/Barplots/Ox66', device = 'png')
+ggsave(p3, filename = '../../Graphs/SVG/LDH/Barplots/DEP + Ox66.png', device= "png")
 ```
 
 
@@ -228,7 +214,7 @@ print(plt)
 # Fit linear regression and 
 plot_and_save <- function(cmpnd, assay){
   title <- sprintf("LDH Across Groups for Human Astroglial Cells (SVGp12) - %s", assay, cmpnd)
-  file_path <- sprintf("../../Graphs/SVG/%s_%s.png", cmpnd, assay)
+  file_path <- sprintf("../../Graphs/SVG/LDH/LinearReg/%s_%s.png", cmpnd, assay)
   df_scaled %>%
   filter(compound==cmpnd) %>%
   mutate(group = factor(group, levels = c("Normoxia - 24 Hours", "Hypoxia - 24 Hours",
@@ -242,17 +228,16 @@ plot_and_save <- function(cmpnd, assay){
        color="Condition - Exposure Time") +
     theme_bw(base_size= 10)
   
-ggsave(file_path, device = "png", width=8, type="cairo", height = 4.5)
+ggsave(file_path, device = "png", width=8, height = 4.5)
 }
 
 
-p1<- plot_and_save("DEP", "LDH")
-p2<- plot_and_save("Ox66", "LDH")
-p3<- plot_and_save("DEP + Ox66", "LDH")
+plot_and_save("DEP", "LDH")
+plot_and_save("Ox66", "LDH")
+plot_and_save("DEP + Ox66", "LDH")
 
-#g <- arrangeGrob(p1,p2,p3, nrow = 3)
 
-#ggsave("../../Graphs/compiled_trends.png", g, device="png", type="cairo")
+
 
 ```
 
@@ -260,12 +245,12 @@ p3<- plot_and_save("DEP + Ox66", "LDH")
 ```{r}
 #Function for finding the slope coefficient 
 find_mdl_coefficient <- function(x,y){
-  coef(summary(lm(log10(y)~x)))[2,1]
+  coef(summary(lm(y~x)))[2,1]
 }
 
 #Function for finding the slope coefficient confidence interval
 find_mdl_coefficient_ce <- function(x,y){
-  lin_mod <- lm(log10(y)~x)
+  lin_mod <- lm(y~x)
   std_err <- coef(summary(lin_mod))[2,2]
   df <- length(residuals(lin_mod))
   crit_t <- abs(qt(0.05/2, df))
@@ -310,7 +295,7 @@ plot_ces <- function(cmpnd, assay){
 
   
   title <- sprintf("Slope Confidence Intervals for SVGp12 - %s (%s)", cmpnd, assay)
-  file_name <- sprintf("../../Graphs/SVG/SVG_%s_%s_CE.png", cmpnd, assay)
+  file_name <- sprintf("../../Graphs/SVG/LDH/SlopesCEs/SVG_%s_%s_CE.png", cmpnd, assay)
   x_lines <- c(rbind(df_slopes_dep$slope_min, df_slopes_dep$slope_max))
   x_pvals <- rep(c(twentyfour.dif.z$pval_x, twentyfour.dif.z$pval_x,
                  fortyeight.dif.z$pval_x, fortyeight.dif.z$pval_x), each=2)
@@ -329,7 +314,6 @@ plot_ces <- function(cmpnd, assay){
   group <- rep(df_slopes_dep$group, each = 2)
   df_lines <- 
     data.frame(x=x_lines, y=y_lines, group=group) 
-  print(length(lbls))
   ggplot(data=df_lines, mapping=aes(x=x_lines, y=y_lines, color=group)) + 
     geom_line() + 
     geom_text(aes(x=x_pvals, y=y_pvals, label=lbls),color='black') +
