--- a/Code/R/Assays.Rmd
+++ b/Code/R/Assays.Rmd
@@ -213,7 +213,7 @@ ggsave(p3, filename = '../../Graphs/SVG/LDH/Barplots/DEP + Ox66.png', device= "p
 ```{r}
 # Fit linear regression and 
 plot_and_save <- function(cmpnd, assay){
-  title <- sprintf("LDH Across Groups for Human Astroglial Cells (SVGp12) - %s", assay, cmpnd)
+  title <- sprintf("LDH Across Groups for Human Astroglial Cells (SVGp12) - %s", cmpnd)
   file_path <- sprintf("../../Graphs/SVG/LDH/LinearReg/%s_%s.png", cmpnd, assay)
   df_scaled %>%
   filter(compound==cmpnd) %>%
@@ -228,7 +228,7 @@ plot_and_save <- function(cmpnd, assay){
        color="Condition - Exposure Time") +
     theme_bw(base_size= 10)
   
-ggsave(file_path, device = "png", width=8, height = 4.5)
+ggsave(file_path, device = "png", width=8, height = 4.5, type='cairo')
 }
 
 
